--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_menu.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_menu.scss
@@ -106,7 +106,7 @@ $ocm-selected-color:                    $brand-warning;
     }
 
     .ocm-nav .show-current-cat {
-        font-weight: $sm-font-weight-medium;
+        font-weight: $font-weight-medium;
     }
 
     .button-bar {
@@ -239,7 +239,7 @@ $ocm-selected-color:                    $brand-warning;
     }
     
     .dropdown.show > .menubar-link {
-        font-weight: $sm-font-weight-medium;
+        font-weight: $font-weight-medium;
     }
 
     .menubar-link span {
