--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_photoswipe-theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_photoswipe-theme.scss
@@ -98,7 +98,7 @@ $pswp__background-color:            #fff;
     font-family: inherit;
     font-size: 26px;
     padding-bottom: 7px;
-    font-weight: $sm-font-weight-medium;
+    font-weight: $font-weight-medium;
     background: #c5c5c5;
     color: #fff !important;
     margin-left: 2rem;
@@ -205,7 +205,7 @@ $pswp__background-color:            #fff;
     width: 80px;
 	height: 40px;
 	font-size: inherit;
-    font-weight: $sm-font-weight-medium;
+    font-weight: $font-weight-medium;
 	line-height: 40px;
 	color: rgba(0,0,0, 0.6);
 	//opacity: 0.75;
