--- a/src/Presentation/SmartStore.Web/Themes/Flex/Views/Shared/ConfigureTheme.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Views/Shared/ConfigureTheme.cshtml
@@ -58,6 +58,8 @@
 		@ThemeVarEditor("font-weight-normal")
 		@ThemeVarEditor("font-weight-medium")
 		@ThemeVarEditor("font-weight-bold")
+		@ThemeVarEditor("headings-font-weight")
+		@ThemeVarEditor("lead-font-weight")
 	</table>
 }
 
