--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_misc.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_misc.scss
@@ -92,7 +92,7 @@ body.popup { padding: 20px; }
         left: 0;
         color: $btn-warning-color;
         background: $btn-warning-bg;
-        font-weight: $sm-font-weight-medium;
+        font-weight: $font-weight-medium;
         font-size: 1rem;
         opacity: 0.7;
         &:hover { 
@@ -176,7 +176,7 @@ progress { color: $btn-info-bg; }
 
 // homepage misc
 .page.home-page .card-header {
-    font-weight: $sm-font-weight-medium;
+    font-weight: $font-weight-medium;
 }
 
 
