--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_buttons.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_buttons.scss
@@ -429,7 +429,7 @@ $btn-gray-bg:       $gray-lightest;
     }
 
     .btn > em > span {
-        font-weight: $sm-font-weight-medium;
+        font-weight: $font-weight-medium;
         font-size: 1.166666em; // make it regular again
         color: $body-color;
     }
