--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_utils.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_utils.scss
@@ -92,7 +92,7 @@ code {
 .popover-title {
     padding-top: 1rem;
     padding-bottom: 1rem;
-    font-weight: $sm-font-weight-medium;
+    font-weight: $font-weight-medium;
 }
 
 
