--- a/src/Presentation/SmartStore.Web/Views/Customer/BackInStockSubscriptions.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/BackInStockSubscriptions.cshtml
@@ -10,72 +10,104 @@
 	Layout = "_MyAccount";
 	ViewBag.PageClassToken = "backinstock";
 	ViewBag.PageTitle = T("Account.BackInStockSubscriptions").Text;
+
+	Model.Subscriptions.Add(new BackInStockSubscriptionModel
+	{
+		Id = 1,
+		ProductName = "Product name",
+		SeName = "SeName"
+	});
+	Model.Subscriptions.Add(new BackInStockSubscriptionModel
+	{
+		Id = 2,
+		ProductName = "Product name",
+		SeName = "SeName"
+	});
+	Model.Subscriptions.Add(new BackInStockSubscriptionModel
+	{
+		Id = 3,
+		ProductName = "Product name",
+		SeName = "SeName"
+	});
+	Model.Subscriptions.Add(new BackInStockSubscriptionModel
+	{
+		Id = 4,
+		ProductName = "Product name",
+		SeName = "SeName"
+	});
+	Model.Subscriptions.Add(new BackInStockSubscriptionModel
+	{
+		Id = 5,
+		ProductName = "Product name",
+		SeName = "SeName"
+	});
 }
 
-@if (Model.Subscriptions.Count > 0)
+@if (Model.Subscriptions.Count == 0)
 {
-    <div class="description">
-        @T("Account.BackInStockSubscriptions.Description")
-    </div>
-    <script type="text/javascript">
-        $(document).ready(function () {
-
-            $('#selectall').click(function () {
-                $('.subscription-list .rowcheckbox').attr('checked', $(this).is(':checked')).change();
-            });
-
-            $(document).on('change', '.subscription-list .rowcheckbox', function (e) {
-                var numChkBoxes = $('.subscription-list .rowcheckbox').length;
-                var numChkBoxesChecked = $('.subscription-list .rowcheckbox:checked').length;
-                $('#selectall').attr('checked', numChkBoxes == numChkBoxesChecked && numChkBoxes > 0);
-            });
-        });
-    </script>        
-    using (Html.BeginForm())
-    {
-    <div class="subscription-list">
-        <table class="table table-striped table-hover">
-            <thead>
-                <tr>
-                    <th class="ac">
-                        <input type="checkbox" id="selectall" />
-                    </th>
-                    <th>
-                        @T("Account.BackInStockSubscriptions.ProductColumn")
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                @for (int i = 0; i < Model.Subscriptions.Count; i++)
-                {
-                    var item = Model.Subscriptions[i];
-                    <tr>
-                        <td class="ac" style="vertical-align: middle">
-                            <input type="checkbox" name="biss@(item.Id)" class="rowcheckbox" />
-                        </td>
-                        <td>
-                            @Html.RouteLink(item.ProductName, "Product", new { SeName = item.SeName })
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-        @if (Model.TotalPages > 1)
-        {
-            @Html.SmartStore().Pager(Model).Name("paginator").Action("BackInStockSubscriptions", "Customer")
-        }
-
-        <div class="buttons">
-            <button type="submit" class="btn btn-danger delete-selected-biss-button">
-                @T("Account.BackInStockSubscriptions.DeleteSelected")
-            </button>
-        </div>
-    </div>
-    }
+	<div class="alert alert-warning">
+		@T("Account.BackInStockSubscriptions.NoSubscriptions")
+	</div>
+	return;
 }
-else
+
+<div class="alert alert-success mb-0">
+    @T("Account.BackInStockSubscriptions.Description")
+</div>
+       
+@using (Html.BeginForm())
 {
-    <div class="alert alert-warning">
-        @T("Account.BackInStockSubscriptions.NoSubscriptions")
-    </div>
+	<div class="subscription-list">
+		<table class="table xtable-striped xtable-bordered">
+			<thead>
+				<tr>
+					<th style="width: 30px">
+						<input type="checkbox" id="selectall" />
+					</th>
+					<th>
+						@T("Account.BackInStockSubscriptions.ProductColumn")
+					</th>
+				</tr>
+			</thead>
+			<tbody>
+				@for (int i = 0; i < Model.Subscriptions.Count; i++)
+				{
+					var item = Model.Subscriptions[i];
+					<tr>
+						<td style="width: 30px">
+							<input type="checkbox" name="biss@(item.Id)" class="rowcheckbox" />
+						</td>
+						<td>
+							@Html.RouteLink(item.ProductName, "Product", new { SeName = item.SeName })
+						</td>
+					</tr>
+				}
+			</tbody>
+		</table>
+
+		@if (Model.TotalPages > 1)
+		{
+			@Html.SmartStore().Pager(Model).Name("paginator").Action("BackInStockSubscriptions", "Customer")
+		}
+
+		<div class="buttons">
+			<button type="submit" class="btn btn-danger btn-lg delete-selected-biss-button">
+				@T("Account.BackInStockSubscriptions.DeleteSelected")
+			</button>
+		</div>
+	</div>
 }
+
+<script>
+    $(function () {
+    	$('#selectall').on('click', function (e) {
+    		$('.subscription-list .rowcheckbox').attr('checked', $(this).is(':checked')).change();
+    	});
+
+    	$(document).on('change', '.subscription-list .rowcheckbox', function (e) {
+    		var numChkBoxes = $('.subscription-list .rowcheckbox').length;
+    		var numChkBoxesChecked = $('.subscription-list .rowcheckbox:checked').length;
+    		$('#selectall').attr('checked', numChkBoxes == numChkBoxesChecked && numChkBoxes > 0);
+    	});
+    });
+</script> 
