Theming: MyAccount > Reward points

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
@@ -180,6 +180,10 @@ body {
     border: 1px solid #fff;
 }
 
+table th {
+    font-weight: $font-weight-medium;
+}
+
 a.pretty-link {
     color: $body-color;
     text-decoration: none;
