Theming: MyAccount > ChangePassword

--- a/src/Presentation/SmartStore.Web/Views/Customer/ChangePassword.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/ChangePassword.cshtml
@@ -16,7 +16,7 @@
 
 	if (!ViewData.ModelState.IsValid)
 	{
-        @Html.ValidationSummary(true)
+        @Html.ValidationSummary(true, "", new { @class = "alert alert-danger" })
     }
 
     if (!String.IsNullOrEmpty(Model.Result))
@@ -27,31 +27,32 @@
     }
 
     <div class="form-group row">
-        @Html.LabelFor(model => model.OldPassword, new { @class = "col-sm-4 form-control-label required", @for = "OldPassword" })
-        <div class="col-sm-8">
-            @Html.TextBoxFor(model => model.OldPassword, new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.OldPassword, null, new { @class = "text-danger" })
+        @Html.LabelFor(model => model.OldPassword, new { @class = "col-lg-4 col-form-label required" })
+        <div class="col-lg-8">
+            @Html.PasswordFor(model => model.OldPassword, new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.OldPassword)
         </div>
     </div>
     <div class="form-group row">
-        @Html.LabelFor(model => model.NewPassword, new { @class = "col-sm-4 form-control-label required", @for = "NewPassword" })
-        <div class="col-sm-8">
-            @Html.TextBoxFor(model => model.NewPassword, new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.NewPassword, null, new { @class = "text-danger" })
+        @Html.LabelFor(model => model.NewPassword, new { @class = "col-lg-4 col-form-label required" })
+        <div class="col-lg-8">
+            @Html.PasswordFor(model => model.NewPassword, new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.NewPassword)
         </div>
     </div>
     <div class="form-group row">
-        @Html.LabelFor(model => model.ConfirmNewPassword, new { @class = "col-sm-4 form-control-label required", @for = "ConfirmNewPassword" })
-        <div class="col-sm-8">
-            @Html.TextBoxFor(model => model.ConfirmNewPassword, new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.ConfirmNewPassword, null, new { @class = "text-danger" })
+        @Html.LabelFor(model => model.ConfirmNewPassword, new { @class = "col-lg-4 col-form-label required" })
+        <div class="col-lg-8">
+            @Html.PasswordFor(model => model.ConfirmNewPassword, new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.ConfirmNewPassword)
         </div>
     </div>
+
     <div class="form-group row">
-        <div class="col-sm-offset-4 col-sm-8">
-            <button type="submit" class="btn btn-primary">
+        <div class="col">
+            <button type="submit" class="btn btn-lg btn-primary">
                 <i class="fa fa-check"></i>
-                @T("Account.ChangePassword.Button")
+                <span>@T("Account.ChangePassword.Button")</span>
             </button>
         </div>
     </div>
