Theming: MyAccount > ForumSubscriptions

--- a/src/Presentation/SmartStore.Web/Views/Customer/BackInStockSubscriptions.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/BackInStockSubscriptions.cshtml
@@ -27,7 +27,7 @@
 @using (Html.BeginForm())
 {
 	<div class="subscription-list">
-		<table class="table xtable-striped xtable-bordered">
+		<table class="table">
 			<thead>
 				<tr>
 					<th style="width: 30px">
