--- a/src/Presentation/SmartStore.Web/Views/Customer/ForumSubscriptions.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/ForumSubscriptions.cshtml
@@ -12,80 +12,78 @@
 	ViewBag.PageTitle = T("Account.ForumSubscriptions").Text;
 }
 
-@if (Model.ForumSubscriptions.Count > 0)
+@if (Model.ForumSubscriptions.Count == 0)
 {
-    <div class="description">
-        @T("Account.ForumSubscriptions.Description")
-    </div>
-    <script type="text/javascript">
-        $(document).ready(function () {
+	<div class="alert alert-warning">
+		@T("Account.ForumSubscriptions.NoSubscriptions")
+	</div>
+	return;
+}
 
-            $('#selectall').click(function () {
-                $('.subscription-list .rowcheckbox').attr('checked', $(this).is(':checked')).change();
-            });
+<div class="alert alert-success mb-0">
+    @T("Account.ForumSubscriptions.Description")
+</div>
 
-            $(document).on('change', '.subscription-list .rowcheckbox', function (e) {
-                var numChkBoxes = $('.subscription-list .rowcheckbox').length;
-                var numChkBoxesChecked = $('.subscription-list .rowcheckbox:checked').length;
-                $('#selectall').attr('checked', numChkBoxes == numChkBoxesChecked && numChkBoxes > 0);
-            });
-        });
-    </script>
-    using (Html.BeginForm())
-    {
-    <div class="subscription-list">
-        <table class="table table-striped table-hover">
-            <col width="1" />
-            <col />
-            <thead>
-                <tr>
-                    <th class="a-center">
-                        <input type="checkbox" id="selectall" />
-                    </th>
-                    <th class="a-center">
-                        @T("Account.ForumSubscriptions.InfoColumn")
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                @for (int i = 0; i < Model.ForumSubscriptions.Count; i++)
-                {
-                    var item = Model.ForumSubscriptions[i];
-                    <tr>
-                        <td class="a-center">
-                            <input type="checkbox" name="fs@(item.Id)" class="rowcheckbox" />
-                        </td>
-                        <td class="a-left">
-                            @if (item.TopicSubscription)
-                            {
-                                @Html.RouteLink(item.Title, "TopicSlug", new { Id = item.ForumTopicId, slug = item.Slug })
-                            }
-                            else
-                            {
-                                @Html.RouteLink(item.Title, "ForumSlug", new { Id = item.ForumId, slug = item.Slug })
-                            }
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-        @if (Model.TotalPages > 1)
-        {
-            @Html.SmartStore().Pager(Model).Name("paginator")
-        }
+@using (Html.BeginForm())
+{
+	<div class="subscription-list">
+		<table class="table">
+			<thead>
+				<tr>
+					<th style="width: 30px">
+						<input type="checkbox" id="selectall" />
+					</th>
+					<th>
+						@T("Account.ForumSubscriptions.InfoColumn")
+					</th>
+				</tr>
+			</thead>
+			<tbody>
+				@for (int i = 0; i < Model.ForumSubscriptions.Count; i++)
+				{
+					var item = Model.ForumSubscriptions[i];
+					<tr>
+						<td style="width: 30px">
+							<input type="checkbox" name="fs@(item.Id)" class="rowcheckbox" />
+						</td>
+						<td>
+							@if (item.TopicSubscription)
+							{
+								@Html.RouteLink(item.Title, "TopicSlug", new { Id = item.ForumTopicId, slug = item.Slug })
+							}
+							else
+							{
+								@Html.RouteLink(item.Title, "ForumSlug", new { Id = item.ForumId, slug = item.Slug })
+							}
+						</td>
+					</tr>
+				}
+			</tbody>
+		</table>
+
+		@if (Model.TotalPages > 1)
+		{
+			@Html.SmartStore().Pager(Model).Name("paginator").QueryParam("page")
+		}
                 
-        <div class="buttons">
-            <button class="btn btn-danger" type="submit" value="delete-subs">
-                <i class="fa fa-trash-o"></i>&nbsp;
-                @T("Account.ForumSubscriptions.DeleteSelected")
-            </button>
-        </div>
-    </div>
-    }
+		<div class="buttons">
+			<button class="btn btn-danger btn-lg" type="submit" value="delete-subs">
+				@T("Account.ForumSubscriptions.DeleteSelected")
+			</button>
+		</div>
+	</div>
 }
-else
-{
-    <div class="alert alert-warning">
-        @T("Account.ForumSubscriptions.NoSubscriptions")
-    </div>
-}
+
+<script>
+    $(function () {
+    	$('#selectall').on('click', function (e) {
+    		$('.subscription-list .rowcheckbox').attr('checked', $(this).is(':checked')).change();
+    	});
+
+    	$(document).on('change', '.subscription-list .rowcheckbox', function (e) {
+    		var numChkBoxes = $('.subscription-list .rowcheckbox').length;
+    		var numChkBoxesChecked = $('.subscription-list .rowcheckbox:checked').length;
+    		$('#selectall').attr('checked', numChkBoxes == numChkBoxesChecked && numChkBoxes > 0);
+    	});
+    });
+</script>
