--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/HomepageManufacturers.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/HomepageManufacturers.cshtml
@@ -20,7 +20,7 @@
         }
 
         <article class="art show-all-manufacturers">
-            <a href="#" class="d-flex align-items-center">
+            <a href="@Url.RouteUrl("ManufacturerList")" class="d-flex align-items-center">
                 <span>@T("Homepage.Brands.ShowAll")</span>
             </a>
         </article>
@@ -32,14 +32,16 @@
     var url = Url.RouteUrl("Manufacturer", new { SeName = item.SeName });
 
     <article class="art" data-id="@item.Id">
-        <div class="art-picture-block">
-            @if (item.PictureUrl.HasValue())
-            {
+        
+        @if (item.PictureUrl.HasValue() && Model.DisplayImages)
+        {
+            <div class="art-picture-block">
                 <a class="art-picture img-center-container" href="@url" title="@item.Name">
                     <img src="@item.PictureUrl" alt="@item.Name" />
                 </a>
-            }
-        </div>
+            </div>
+        }
+                
         <div class="art-genericname">
             <a href="@url" title="@item.Name">
                 <span>@item.Name</span>
