--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasMenu.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasMenu.cshtml
@@ -11,7 +11,7 @@
                     <span class="title">@T("Offcanvas.Menu.Categories")</span>
                 </a>
             </li>
-            @if (ViewBag.ShowManufacturersOnHomepage == true)
+            @if (ViewBag.ShowManufacturers == true)
             {
                 <li class="nav-item col">
                     <a id="manufacturer-tab" class="nav-link" data-toggle="tab" href="#ocm-manufacturers" role="tab" data-initialized="false">
@@ -29,7 +29,7 @@
 
     <div class="tab-content offcanvas-scrollable">
         <div class="tab-pane fade" id="ocm-categories" role="tabpanel"></div>
-        @if (ViewBag.ShowManufacturersOnHomepage == true)
+        @if (ViewBag.ShowManufacturers == true)
         {
             <div class="tab-pane fade" id="ocm-manufacturers" role="tabpanel"></div>
         }
