--- a/src/Presentation/SmartStore.Web/Themes/Flex/Views/Shared/ConfigureTheme.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Views/Shared/ConfigureTheme.cshtml
@@ -58,7 +58,11 @@
 		@ThemeVarEditor("font-weight-normal")
 		@ThemeVarEditor("font-weight-medium")
 		@ThemeVarEditor("font-weight-bold")
+
+		@ThemeVarEditor("headings-font-family", "Headings")
 		@ThemeVarEditor("headings-font-weight")
+		@ThemeVarEditor("headings-line-height")
+		@ThemeVarEditor("headings-color")
 		@ThemeVarEditor("lead-font-weight")
 	</table>
 }
